--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/translate": "^6.3.1",
     "axios": "^0.27.2",
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.1",
