--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.1",
     "moment": "^2.29.3",
-    "mongoose": "^6.3.5"
+    "mongoose": "^6.3.5",
+    "puppeteer": "^14.4.0",
+    "random-useragent": "^0.5.0"
+  },
+  "devDependencies": {
+    "@types/random-useragent": "^0.3.1"
   }
 }
