--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "forever start ts-node index.ts",
-    "restart": "forever restart ts-node index.ts",
+    "start": "forever start -v -c ts-node index.ts",
+    "restart": "forever restart -v -c ts-node index.ts",
     "stop": "forever stop index.ts",
     "logs": "forever logs index.ts -f",
     "dev": "nodemon --exec ts-node index.ts",
