--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "forever start -v -c ts-node index.ts",
-    "restart": "forever restart -v -c ts-node index.ts",
-    "stop": "forever stop index.ts",
-    "logs": "forever logs index.ts -f",
+    "start": "pm2 start --name=discord-believix-bot index.ts",
     "dev": "nodemon --exec ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
