--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,18 +22,27 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - name: Generate .env file
-        run: |
-          touch .env
-          echo DISCORD_TOKEN=${{secrets.DISCORD_TOKEN}} > .env
-          echo MONGODB_CONNECTION_STRING=${{secrets.MONGODB_CONNECTION_STRING}} > .env
-          echo CLOUD_TRANSLATION_API=${{secrets.CLOUD_TRANSLATION_API}} > .env
-          echo CLOUD_TRANSLATION_PROJECT=${{secrets.CLOUD_TRANSLATION_PROJECT}} > .env
-          echo NODE_ENV=${{secrets.NODE_ENV}} > .env
-          echo PUPPETEER_RECAPTCHA_ID=${{secrets.PUPPETEER_RECAPTCHA_ID}} > .env
-          echo PUPPETEER_RECAPTCHA_TOKEN=${{secrets.PUPPETEER_RECAPTCHA_TOKEN}} > .env
-          echo "cat .env"
-          cat .env
+      - name: My first action
+        env:
+          DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
+          MONGODB_CONNECTION_STRING: ${{ secrets.MONGODB_CONNECTION_STRING }}
+          CLOUD_TRANSLATION_API: ${{ secrets.CLOUD_TRANSLATION_API }}
+          CLOUD_TRANSLATION_PROJECT: ${{ secrets.CLOUD_TRANSLATION_PROJECT }}
+          NODE_ENV: ${{ secrets.NODE_ENV }}
+          PUPPETEER_RECAPTCHA_ID: ${{ secrets.PUPPETEER_RECAPTCHA_ID }}
+          PUPPETEER_RECAPTCHA_TOKEN: ${{ secrets.PUPPETEER_RECAPTCHA_TOKEN }}
+      # - name: Generate .env file
+      #   run: |
+      #     touch .env
+      #     echo DISCORD_TOKEN=${{secrets.DISCORD_TOKEN}} > .env
+      #     echo MONGODB_CONNECTION_STRING=${{secrets.MONGODB_CONNECTION_STRING}} > .env
+      #     echo CLOUD_TRANSLATION_API=${{secrets.CLOUD_TRANSLATION_API}} > .env
+      #     echo CLOUD_TRANSLATION_PROJECT=${{secrets.CLOUD_TRANSLATION_PROJECT}} > .env
+      #     echo NODE_ENV=${{secrets.NODE_ENV}} > .env
+      #     echo PUPPETEER_RECAPTCHA_ID=${{secrets.PUPPETEER_RECAPTCHA_ID}} > .env
+      #     echo PUPPETEER_RECAPTCHA_TOKEN=${{secrets.PUPPETEER_RECAPTCHA_TOKEN}} > .env
+      #     echo "cat .env"
+      #     cat .env
       - run: npm ci
       - run: npm run stop
       - run: npm run start
