--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
           MONGODB_CONNECTION_STRING: ${{ secrets.MONGODB_CONNECTION_STRING }}
           CLOUD_TRANSLATION_API: ${{ secrets.CLOUD_TRANSLATION_API }}
           CLOUD_TRANSLATION_PROJECT: ${{ secrets.CLOUD_TRANSLATION_PROJECT }}
-          NODE_ENV: ${{ secrets.NODE_ENV }}
+          NODE_ENV: test
           PUPPETEER_RECAPTCHA_ID: ${{ secrets.PUPPETEER_RECAPTCHA_ID }}
           PUPPETEER_RECAPTCHA_TOKEN: ${{ secrets.PUPPETEER_RECAPTCHA_TOKEN }}
       # - name: Generate .env file
