--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,7 +12,7 @@ env:
   MONGODB_CONNECTION_STRING: ${{ secrets.MONGODB_CONNECTION_STRING }}
   CLOUD_TRANSLATION_API: ${{ secrets.CLOUD_TRANSLATION_API }}
   CLOUD_TRANSLATION_PROJECT: ${{ secrets.CLOUD_TRANSLATION_PROJECT }}
-  NODE_ENV: test
+  NODE_ENV: ${{ secrets.NODE_ENV }}
   PUPPETEER_RECAPTCHA_ID: ${{ secrets.PUPPETEER_RECAPTCHA_ID }}
   PUPPETEER_RECAPTCHA_TOKEN: ${{ secrets.PUPPETEER_RECAPTCHA_TOKEN }}
 
