--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "@google-cloud/translate": "^6.3.1",
     "@types/cheerio": "^0.22.31",
     "axios": "^0.27.2",
-    "cheerio": "^1.0.0-rc.11",
-    "discord.js": "^13.7.0",
-    "dotenv": "^16.0.1",
-    "moment": "^2.29.3",
-    "mongoose": "^6.3.5",
-    "puppeteer": "^14.4.0",
-    "puppeteer-extra": "^3.2.3",
-    "puppeteer-extra-plugin-recaptcha": "^3.5.0",
+    "cheerio": "^1.0.0-rc.12",
+    "discord.js": "^13.12.0",
+    "dotenv": "^16.0.3",
+    "moment": "^2.29.4",
+    "mongoose": "^6.9.2",
+    "openai": "^3.1.0",
+    "puppeteer": "^14.4.1",
+    "puppeteer-extra": "^3.3.4",
+    "puppeteer-extra-plugin-recaptcha": "^3.6.6",
     "random-useragent": "^0.5.0"
   },
   "devDependencies": {
